<?xml version="1.0"?>
<package format="2">
  <name>supervisor</name>
  <version>0.1.0</version>
  <description>Fake it till you make it</description>

  <maintainer email="davide.faconti@eurecat.org">Davide Faconti</maintainer>
  <license>MIT</license>

  <buildtool_depend>catkin</buildtool_depend>

  <depend>geometry_msgs</depend>
  <depend>message_filters</depend>
  <depend>nav_msgs</depend>
  <depend>roscpp</depend>
  <depend>std_msgs</depend>
  <depend>tf</depend>
  <depend>grape_msgs</depend>
  <depend>behavior_tree_cpp</depend>
  <depend>moveit_core</depend>
  <depend>moveit_ros_planning_interface</depend>

  <!-- The export tag contains other, unspecified, tags -->
  <export>
    <!-- Other tools can request additional information be placed here -->

  </export>
</package>
